--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,99 @@
+appdirs==1.4.4
+apturl==0.5.2
+asgiref==3.2.10
+asn1crypto==0.24.0
+autopep8==1.5.3
+beautifulsoup4==4.9.1
+Brlapi==0.6.6
+certifi==2018.1.18
+chardet==3.0.4
+chrome-gnome-shell==0.0.0
+click==7.1.2
+command-not-found==0.3
 config==0.4.2
+confusable-homoglyphs==3.2.0
+cryptography==2.1.4
+cupshelpers==1.0
+defer==1.0.6
+distlib==0.3.1
+distro-info===0.18ubuntu0.18.04.1
 dj-database-url==0.5.0
-Django==1.11.23
-django-bootstrap3==11.1.0
+Django==3.0.8
+django-bootstrap3==14.1.0
+django-bootstrap4==2.2.0
+django-crispy-forms==1.9.1
 django-heroku==0.3.1
 django-registration==2.4.1
-django-tinymce==2.8.0
+django-tinymce==3.0.2
+djangorestframework==3.11.0
+filelock==3.0.12
+Flask==1.1.2
 gunicorn==19.9.0
+httplib2==0.9.2
+idna==2.6
+importlib-metadata==1.7.0
+importlib-resources==3.0.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
 lazy-object-proxy==1.4.2
+louis==3.5.0
+macaroonbakery==1.1.3
+Mako==1.0.7
+MarkupSafe==1.1.1
 mccabe==0.6.1
-Pillow==6.1.0
-psycopg2==2.8.3
-python-decouple==3.1
-pytz==2019.2
-sqlparse==0.3.0
+netifaces==0.10.4
+oauth==1.0.1
+olefile==0.45.1
+pexpect==4.2.1
+Pillow==7.2.0
+protobuf==3.0.0
+psycopg2==2.8.5
+pycairo==1.16.2
+pycodestyle==2.6.0
+pycparser==2.20
+pycrypto==2.6.1
+pycups==1.9.73
+pydocstyle==5.0.2
+pyflakes==2.2.0
+pygobject==3.26.1
+pymacaroons==0.13.0
+PyNaCl==1.1.2
+pyRFC3339==1.0
+python-apt==1.6.5+ubuntu0.3
+python-dateutil==2.6.1
+python-debian==0.1.32
+python-decouple==3.3
+pytz==2020.1
+pyxdg==0.25
+PyYAML==3.12
+reportlab==3.4.0
+requests==2.18.4
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.15.0
+snowballstemmer==2.0.0
+soupsieve==2.0.1
+sqlparse==0.3.1
+system-service==0.3
+systemd-python==234
+toml==0.10.1
 typed-ast==1.4.0
-whitenoise==4.1.3
-    
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.22
+usb-creator==0.3.3
+virtualenv==20.0.26
+wadllib==1.3.2
+Werkzeug==1.0.1
+whitenoise==5.1.0
+xkit==0.0.0
+zipp==3.1.0
+zope.interface==4.3.2
